# EVENmonitor

./: LICENSE  README.md  pyproject.toml
.github/: lint.yml
EVENmonitor/: EVENmonitor.py  even6_parser.py  utils.py
