[project]
name = "EVENmonitor"
version = "1.0.0"
description = "Monitor the Windows Event Log with grep-like features or filtering for specific Event IDs"
authors = [
    {name = "Alexander Neff", email = "alex99.neff@gmx.de"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "impacket @ git+https://github.com/NeffIsBack/impacket@add-eventlog-calls",
    "python-evtx (>=0.8.1,<0.9.0)",
    "requests (>=2.32.5,<3.0.0)",
    "termcolor (>=3.1.0,<4.0.0)",
]

[project.scripts]
EVENmonitor = "EVENmonitor.EVENmonitor:main"
even = "EVENmonitor.EVENmonitor:main"

[tool.poetry]
packages = [
    { include = "EVENmonitor" },
]

[tool.poetry.group.dev.dependencies]
ruff = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py313"
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".mypy_cache",
    ".nox", ".pants.d", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv",
    "__pypackages__", "_build", "buck-out", "build", "dist", "node_modules", "venv"
]
preview = true

[tool.ruff.lint]
select = [
    "E", "F", "D", "UP", "YTT", "ASYNC", "B", "A", "C4", "ISC", "ICN", "PIE", "PT",
    "Q", "RSE", "RET", "SIM", "TID", "ERA", "FLY", "PERF", "LOG", "RUF", "W"
]
ignore = [
    "A004", "E501", "F405", "D100", "D101", "D102", "D103", "D104", "D105", "D106",
    "D107", "D203", "D204", "D205", "D212", "D213", "D400", "D401", "D413", "D415",
    "D417", "D419", "FURB", "RET503", "RET505", "RET506", "RET507", "RET508",
    "PERF203", "RUF012", "RUF052", "RUF059"
]

# THE SETTINGS BELOW ARE DEFAULTS, left in here to override potential vs-code settings
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
per-file-ignores = {}

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"
